--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "NONE",
   "main": "src",
   "scripts": {
-    "start": "mfleet",
+    "start": "mfleet --lib ./src",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
@@ -16,8 +16,16 @@
     "prettier": "^1.15.2"
   },
   "dependencies": {
-    "@microfleet/core": "^12.0.1",
-    "config": "^3.0.1"
+    "@microfleet/core": "^13.6.0",
+    "@microfleet/transport-amqp": "^13.1.3",
+    "@microfleet/validation": "^8.1.1",
+    "common-errors": "^1.0.5",
+    "config": "^3.0.1",
+    "hapi": "^18.1.0",
+    "jaeger-client": "^3.14.4",
+    "js-yaml": "^3.12.1",
+    "prom-client": "^11.2.1",
+    "uuid": "^3.3.2"
   },
   "husky": {
     "hooks": {
