--- a/package.json
+++ b/package.json
@@ -7,24 +7,30 @@
   "main": "src",
   "scripts": {
     "start": "mfleet --lib ./src",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "test": "mocha"
   },
   "devDependencies": {
-    "eslint": "^5.9.0",
+    "eslint": "^5.14.1",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.0",
     "prettier": "^1.15.2"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^0.3.5",
+    "@grpc/proto-loader": "^0.4.0",
     "@microfleet/core": "^13.6.0",
-    "@microfleet/transport-amqp": "^13.1.3",
     "@microfleet/validation": "^8.1.1",
+    "bluebird": "^3.5.3",
+    "cheerio": "^1.0.0-rc.2",
     "common-errors": "^1.0.5",
     "config": "^3.0.1",
+    "date-fns": "^1.30.1",
     "hapi": "^18.1.0",
-    "jaeger-client": "^3.14.4",
     "js-yaml": "^3.12.1",
+    "mocha": "^6.0.1",
     "prom-client": "^11.2.1",
+    "superagent": "^4.1.0",
     "uuid": "^3.3.2"
   },
   "husky": {
