--- a/config/default.yml
+++ b/config/default.yml
@@ -1,5 +1,7 @@
+# docker run -p 15672:15672 -p 5672:5672 rabbitmq:3-management
 name: clever
 plugins: ["logger", "validator", "router", "http", "amqp", "prometheus"]
+maintenanceMode: false
 
 http:
   server:
@@ -7,37 +9,43 @@ http:
     port: 3000
   router:
     enabled: true
+  # extensions:
+  #   - preRequest
+  #   - preResponse
+  #   - postRequest
+  #   - postResponse
+
+logger:
+  defaultLogger: true
+  # prettifyDefaultLogger: false
+  # streams:
+  #   pretty:
+  #     level: debug
+  #     translateTime: true
 
 router:
   routes:
     directory: src/actions
+    prefix: debug
+    enabledGenericActions:
+      - health
 
-# amqp:
-#   transport:
-#     connection:
-#       host: localhost
-
-logger:
-  debug: true
-  defaultLogger: true
-  options: # https://github.com/pinojs/pino/blob/HEAD/docs/api.md#options
-    level: debug
-    base: null
-
-# opentracing:
-#   config:
-#     disable: false
-#     serviceName: tracer
-#     sampler:
-#       type: const
-#       param: 1
-#     reporter:
-#       # collectorEndpoint: http://localhost:14268/api/traces
-#       agentHost: localhost
-#       agentPort: 6832
-#   options:
-#     tags:
-#       customtag: "true"
+amqp:
+  transport:
+    connection:
+      # host:
+      #   - host: localhost
+      #     port: 5672
+      # login: guest
+      # password: guest
+      host:
+        - host: amqp.staging.svc.cluster.local
+          port: 5672
+      login: guest
+      password: gWTfbOcGIudKXm4IXstUEBnL
+      vhost: /
+  router:
+    enabled: true
 
 tests:
   hosts:
