--- a/package.json
+++ b/package.json
@@ -11,27 +11,29 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "eslint": "^5.14.1",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "prettier": "^1.15.2"
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^0.3.5",
-    "@grpc/proto-loader": "^0.4.0",
-    "@microfleet/core": "^13.6.0",
-    "@microfleet/validation": "^8.1.1",
-    "bluebird": "^3.5.3",
-    "cheerio": "^1.0.0-rc.2",
+    "@grpc/grpc-js": "^0.5.2",
+    "@grpc/proto-loader": "^0.5.1",
+    "@microfleet/core": "^14.0.2",
+    "@microfleet/validation": "^8.1.2",
+    "bluebird": "^3.5.5",
+    "cheerio": "^1.0.0-rc.3",
     "common-errors": "^1.0.5",
-    "config": "^3.0.1",
-    "date-fns": "^1.30.1",
+    "config": "^3.2.2",
+    "date-fns": "^2.0.1",
     "hapi": "^18.1.0",
-    "js-yaml": "^3.12.1",
-    "mocha": "^6.0.1",
-    "prom-client": "^11.2.1",
-    "superagent": "^4.1.0",
-    "uuid": "^3.3.2"
+    "js-yaml": "^3.13.1",
+    "mocha": "^6.2.0",
+    "prom-client": "^11.5.3",
+    "pump": "^3.0.0",
+    "split2": "^3.1.1",
+    "superagent": "^5.1.0",
+    "uuid": "^3.3.3"
   },
   "husky": {
     "hooks": {
